[package]
name = "varshow"
version = "0.1.0"
authors = ["Christian Brevik <christian.brevik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-functions = "0.11.0"
log = "0.4.8"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
rand = "0.7.2"