[package]
name = "varshow"
version = "0.1.0"
authors = ["Christian Brevik <christian.brevik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-functions = "0.11.0"
azure_sdk_core = "0.30.0"
azure_sdk_storage_core = "0.30.0"
azure_sdk_storage_table = "0.30.2"
derive_more = "0.9.0"
futures = "0.3.1"
log = "0.4.8"
rand = "0.7.2"
regex = "1.3.1"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"